get changing rooms to work, still get pwned by sam

--- a/client/index.html
+++ b/client/index.html
@@ -28,11 +28,13 @@
       <h1>chatterbox</h1>
       <select id="roomSelect">
       </select>
-      <form id="send">
-        Message:
-        <input id="message" type="text">
-        <input class="submit" type="submit">
-      </form>
+      <div id="send">
+        <form class="submit">
+          Message:
+          <input id="message" type="text">
+          <input type="submit">
+        </form>
+      </div>
     </div>
     <div id="chats"></div>
   </body>
