Add refresh spinner while changeRoom populates with messages.

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
   </head>
   <body>
     <div id="main">
+      <img class='spinner' src="images/spiffygif_46x46.gif"/>
       <h1>chatterbox</h1>
       <select id="roomSelect">
       </select>
