Add refresh button with working click handler

--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,7 @@
           <input type="submit">
         </form>
       </div>
+      <button id="refresh">Refresh</button>
     </div>
     <div id="chats"></div>
   </body>
