--- a/client/index.html
+++ b/client/index.html
@@ -29,8 +29,7 @@
   </head>
   <body>
     <div id="main">
-      <img class='spinner' src="images/spiffygif_46x46.gif"/>
-      <h1>chatterbox</h1>
+      <h1>chatterbox : </h1>
       <select id="roomSelect" class="selectpicker">
       </select>
       <div id="send">
@@ -44,6 +43,7 @@
           <button type="button" class="btn btn-default" id="newRoom">New Room</button>
         </form>
       </div>
+      <img class='spinner' src="images/spiffygif_46x46.gif"/>
     </div>
     <div id="chats"></div>
   </body>
